--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,17 @@ body, .btn{
     display: flex;
     flex-direction: column;
 }
+.history_item{
+    background-color: #1B1A1D;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+    cursor: pointer;
+}
+.history_item:hover{
+    color: #000;
+    background-color: #BBD8EC;
+}
 .darker{
     filter: brightness(0.9);
 }
@@ -131,6 +142,12 @@ h1{
         flex-direction: row;
         gap: 0.5em;
         justify-content: center;
+    }
+    .history_item{
+        margin: 0;
+        padding: 2px;
+        background: none;
+        border: none;
     }
     #forecast{
         gap: 0.1em;
